Fixed z-index issue

--- a/src/components/AppHeader/AppHeader.css
+++ b/src/components/AppHeader/AppHeader.css
@@ -7,7 +7,7 @@
     top: 0;
     font-size: 20pt;
     font-weight: bold;
-    z-index: 1;
+    z-index: 5;
 }
 
 .header-top {    
